[metadata]
name = MatchSim
description = Tool for simulating NRMP Match results
long_description = file:README.md
long_description_content_type = text/markdown
author = James Stevenson
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    numpy
    click

tests_require =
    pytest

[tool:pytest]
addopts = --ignore setup.py .
